--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -5,13 +5,14 @@
 // Colors
 $footer: #222;
 
-$dark: #333333;
+$dark: #40474D;
 
 $dark-red:#c0392b;
 $red:#e74c3c;
 
 $gray: #7f8c8d;
 
+$blue: #4EAACC;
 $dark-blue: #3498db;
 
 $orange: #E96E57;
@@ -37,5 +38,5 @@ $norm: 960px;
 $wide:1200px;
 
 
-$btn:$dark-blue;
+$btn: $blue;
 $link: $orange;
