--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -25,11 +25,11 @@
     <link rel="stylesheet" href="/css/main.css">
 
   </head>
-
   <body>
     <header class="header">
       <h2 class="site-title"><a href="/"><img src="/img/logo.svg" />SteelTrap</a></h2>
       <span>A <i>personal</i>, personal assistant</span>
+      <% if(loggedIn()) { %>
       <nav class="site-nav">
         <ul>
           <li><a href="/clients"><i class="fa fa-users"></i>Clients</a></li>
@@ -38,6 +38,7 @@
           <li><a href="/expenses"><i class="fa fa-dollar"></i>Expenses</a></li>
         </ul>
       </nav>
+      <% } %>
     </header>
     <main>
     <%- body %>
