--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -1,64 +1,42 @@
 <% layout('layout') -%>
 <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-    <div class="col-sm-6">
-      <div class="well">
-        <h3><span class="fa fa-user"></span> Local</h3>
-
-        <% if (user.local.email) { %>
-          <p>
-            <strong>id</strong>: <%= user._id %><br>
-            <strong>email</strong>: <%= user.local.email %><br>
-            <strong>password</strong>: <%= user.local.password %>
-          </p>
-          
-          <a href="/unlink/local" class="btn btn-default">Unlink</a>
-        <% } else { %>
-          <a href="/connect/local" class="btn btn-default">Connect Local</a>
-        <% } %>
-
-      </div>
-    </div>
-
-
-    <!-- TWITTER INFORMATION -->
-    <div class="col-sm-6">
-      <div class="well">
-        <h3 class="text-info"><span class="fa fa-twitter"></span> Twitter</h3>
-        <!-- check if the user has this token (is the user authenticated with this social account) -->
-        <% if (user.twitter.token) { %>
-          <p>
-            <strong>id</strong>: <%= user.twitter.id %><br>
-            <strong>token</strong>: <%= user.twitter.token %><br>
-            <strong>display name</strong>: <%= user.twitter.displayName %><br>
-            <strong>username</strong>: <%= user.twitter.username %>
-          </p>
-
-          <a href="/unlink/twitter" class="btn btn-info">Unlink</a>
-        <% } else { %>
-          <a href="/connect/twitter" class="btn btn-info">Connect Twitter</a>
-        <% } %>
-
-      </div>
-    </div>
-
-    <!-- GOOGLE INFORMATION -->
-    <div class="col-sm-6">
-      <div class="well">
-        <h3 class="text-danger"><span class="fa fa-google-plus"></span> Google+</h3>
-
-        <!-- check if the user has this token (is the user authenticated with this social account) -->
-        <% if (user.google.token) { %>
-          <p>
-            <strong>id</strong>: <%= user.google.id %><br>
-            <strong>token</strong>: <%= user.google.token %><br>
-            <strong>email</strong>: <%= user.google.email %><br>
-            <strong>name</strong>: <%= user.google.name %>
-          </p>
-
-          <a href="/unlink/google" class="btn btn-danger">Unlink</a>
-        <% } else { %>
-          <a href="/connect/google" class="btn btn-danger">Connect Google</a>
-        <% } %>
-
-      </div>
-    </div>
+<div class="profile-container">
+<div class="profile-type">
+  <h3><span class="fa fa-user"></span> Local</h3>
+  <% if (user.local.email) { %>
+    <p>
+      <strong>email</strong>: <%= user.local.email %><br>
+    </p>
+    
+    <a href="/unlink/local" class="btn btn-default">Unlink</a>
+  <% } else { %>
+    <a href="/connect/local" class="btn btn-default">Connect Local</a>
+  <% } %>
+</div>
+<div class="profile-type">
+  <h3 class="text-info"><span class="fa fa-twitter"></span> Twitter</h3>
+  <!-- check if the user has this token (is the user authenticated with this social account) -->
+  <% if (user.twitter.token) { %>
+    <p>
+      <strong>display name</strong>: <%= user.twitter.displayName %><br>
+      <strong>username</strong>: <%= user.twitter.username %>
+    </p>
+    <a href="/unlink/twitter" class="btn btn-info">Unlink</a>
+  <% } else { %>
+    <a href="/connect/twitter" class="btn btn-info">Connect Twitter</a>
+  <% } %>
+</div>
+<div class="profile-type">
+  <h3 class="text-danger"><span class="fa fa-google-plus"></span> Google+</h3>
+  <!-- check if the user has this token (is the user authenticated with this social account) -->
+  <% if (user.google.token) { %>
+    <p>
+      <strong>email</strong>: <%= user.google.email %><br>
+      <strong>name</strong>: <%= user.google.name %>
+    </p>
+    <a href="/unlink/google" class="btn btn-danger">Unlink</a>
+  <% } else { %>
+    <a href="/connect/google" class="btn btn-danger">Connect Google</a>
+  <% } %>
+</div>
+</div>
