adds add project to client feature

--- a/app/views/clients/client.ejs
+++ b/app/views/clients/client.ejs
@@ -25,7 +25,7 @@
   </div>
   <ul class="client-options">
     <li><a class="client-email-icon" href="mailto:<%= client.email %>"><i class="fa fa-envelope"></i><span>Email Client</span></a></li>
-    <li><a class="client-briefcase-icon" href="#"><i class="fa fa-briefcase"></i><span>Add Project</span></a></li>
+    <li><a class="client-briefcase-icon" href="/projects/new/<%= client.id %>"><i class="fa fa-briefcase"></i><span>Add Project</span></a></li>
     <li><a class="client-calendar-icon" href="#"><i class="fa fa-calendar"></i><span>Add Event</span></a></li>
   </ul>
 </article>
