--- a/public/scss/components/_base.scss
+++ b/public/scss/components/_base.scss
@@ -48,15 +48,33 @@ textarea {
   color:#333;
   padding:5px;
   margin: 10px 0;
+  border:solid 2px #eee;
   @include border-radius(4px);
   @include fs(24px);  
 }
 
 select {
   @include fs(24px);
-  padding: 5px 10px;
+  border:solid 2px #eee;
+  padding: 5px 40px 5px 10px;
   -webkit-appearance: none;  /*Removes default chrome and safari style*/
   -moz-appearance: none;  /*Removes default style Firefox*/
+}
+.select:after {
+  content:'';
+  border-top:solid 6px #ccc;
+  border-right:solid 6px transparent;
+  border-left:solid 6px transparent;
+  position: relative;
+  margin-left: -22px;
+  top:18px;
+}
+
+
+.content-form {
+  background: #FFF;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 
