--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -224,11 +224,12 @@ main {
   }
   .client-image {
     position: absolute;
-    max-width: 100%;
-    height: 230px;
+    width: 350px;
+    height: 187px;
     top:0;
     left:0;
     z-index: 10;
+    border-bottom: 4px solid #eee;
   }
   .client-grav {
     border:solid 4px white;
