--- a/app/views/projects/project.ejs
+++ b/app/views/projects/project.ejs
@@ -20,7 +20,7 @@
     <ul class="todos-list">
     <% if(project.todos.length > 0) { %>
       <% completed(project.todos).forEach(function(todo){ %>
-        <li data-id="<%= todo._id %>" class="todo-item <%= todo.complete ? 'complete' : 'not-complete' %>"><%= todo.title %></li>
+        <li data-id="<%= todo._id %>" data-parent="<%= project._id %>" class="todo-item <%= todo.complete ? 'complete' : 'not-complete' %>"><%= todo.title %></li>
       <% }); %>
     <%  } else { %>
       <li class="no-todos-item">No Todos</li>
