--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -59,6 +59,7 @@
     <script src="/js/lib/picker.js"></script>
     <script src="/js/lib/picker.date.js"></script>
     <script src="/js/lib/underscore.js"></script>
+    <script src="/js/lib/Chart.min.js"></script>
     <script src="/js/script.js"></script>
   </body>
   
