tightens up and adds graph

--- a/app/views/clients/form.ejs
+++ b/app/views/clients/form.ejs
@@ -1,4 +1,4 @@
-<form method="post" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data" class="content-form">
   <label>
     Client Name: <input value="<%= _client.name? _client.name : '' %>" type="text" name="name" placeholder="Company Name" />
   </label>
