--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -23,7 +23,7 @@
        
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/main.css">
-
+    <script type="text/javascript" src="//www.google.com/jsapi"></script>
   </head>
   <body>
     <header class="header">
