--- a/app/views/projects/index.ejs
+++ b/app/views/projects/index.ejs
@@ -3,6 +3,10 @@
 
 <h2>Projects</h2>
 
+<div id="visualization">
+</div>
+
+
 <h3>Current Projects</h3>
 <%-partial('project',projects)%>
 
@@ -13,3 +17,33 @@
 	<%= proj.paiddate ? moment(proj.paiddate).format('MM/DD/YYYY') : ''  %>
 	<%= proj.paid %>
 <% }); %>
+
+<script>
+  function drawVisualization() {
+  var data = google.visualization.arrayToDataTable([
+    ['x', 'Cats', 'Blanket 1', 'Blanket 2'],
+    ['A',   1,       1,           0.5],
+    ['B',   2,       0.5,         1],
+    ['C',   4,       1,           0.5],
+    ['D',   8,       0.5,         1],
+    ['E',   7,       1,           0.5],
+    ['F',   7,       0.5,         1],
+    ['G',   8,       1,           0.5],
+    ['H',   4,       0.5,         1],
+    ['I',   2,       1,           0.5],
+    ['J',   3.5,     0.5,         1],
+    ['K',   3,       1,           0.5],
+    ['L',   3.5,     0.5,         1],
+    ['M',   1,       1,           0.5],
+    ['N',   1,       0.5,         1]
+  ]);
+  new google.visualization.LineChart(document.getElementById('visualization')).
+      draw(data, {
+                  width: 900, height: 400, colors:['#E96E57', '#3498db', '#40474D'], backgroundColor: 'transparent',
+                  vAxis: {maxValue: 10, gridlines: {color:'#ddd'}, textStyle:{color: '#40474D'}},
+                  hAxis: {textStyle: {color: '#40474D'}}}
+          );
+}
+
+	google.setOnLoadCallback(drawVisualization);
+</script>
