--- a/public/scss/components/_typography.scss
+++ b/public/scss/components/_typography.scss
@@ -1,9 +1,14 @@
+h1 {
+  margin-bottom: 30px;
+}
+
 h2 {
   @include fs(38px);
   margin-bottom: 30px;
 }
 
 h3 {
+  font-weight: 300;
   margin-bottom: 20px;
   &.project-title {
     @include fs(38px);
@@ -15,4 +20,9 @@ h3 {
       opacity: 0.5;
     }
   }
+}
+
+h4 {
+  margin-bottom: 10px;
+  color: #aaa;
 }
