--- a/app/views/projects/index.ejs
+++ b/app/views/projects/index.ejs
@@ -13,37 +13,61 @@
 <h3>Inactive Projects</h3>
 <%-partial('project',iaprojects)%>
 
-<% allproj.forEach(function(proj){ %>
-	<%= proj.paiddate ? moment(proj.paiddate).format('MM/DD/YYYY') : ''  %>
-	<%= proj.paid %>
-<% }); %>
 
+	
+	
 <script>
-  function drawVisualization() {
-  var data = google.visualization.arrayToDataTable([
-    ['x', 'Cats', 'Blanket 1', 'Blanket 2'],
-    ['A',   1,       1,           0.5],
-    ['B',   2,       0.5,         1],
-    ['C',   4,       1,           0.5],
-    ['D',   8,       0.5,         1],
-    ['E',   7,       1,           0.5],
-    ['F',   7,       0.5,         1],
-    ['G',   8,       1,           0.5],
-    ['H',   4,       0.5,         1],
-    ['I',   2,       1,           0.5],
-    ['J',   3.5,     0.5,         1],
-    ['K',   3,       1,           0.5],
-    ['L',   3.5,     0.5,         1],
-    ['M',   1,       1,           0.5],
-    ['N',   1,       0.5,         1]
-  ]);
-  new google.visualization.LineChart(document.getElementById('visualization')).
-      draw(data, {
-                  width: 900, height: 400, colors:['#E96E57', '#3498db', '#40474D'], backgroundColor: 'transparent',
-                  vAxis: {maxValue: 10, gridlines: {color:'#ddd'}, textStyle:{color: '#40474D'}},
-                  hAxis: {textStyle: {color: '#40474D'}}}
-          );
-}
+	google.setOnLoadCallback(drawChart);
 
-	google.setOnLoadCallback(drawVisualization);
+	function drawChart() {
+
+		var dataTable = new google.visualization.DataTable();
+    	dataTable.addColumn({ type: 'date', id: 'Date' });
+    	dataTable.addColumn({ type: 'number', id: 'Income' });
+    	dataTable.addRows(
+    		[
+    		<% allproj.forEach(function(proj){ %>
+    			[ new Date(<%= moment(proj.paiddate).format('YYYY') %>,<%= moment(proj.paiddate).format('M') %>,<%= moment(proj.paiddate).format('D') %>),  <%= proj.paid %>],
+    		<% }); %>
+    		]
+    	);
+  
+
+    	var chart = new google.visualization.Calendar(document.getElementById('visualization'));
+
+    	var options = {
+    		title: "Monthly Income",
+    		height: 200,
+    		noDataPattern: {
+           		backgroundColor: '#fff',
+        		color: '#fff'
+        	},
+    		calendar: {
+    			monthLabel: {
+        			color: '#ccc',
+      			},
+    		  	cellColor: {
+    		    	stroke: '#eee',
+    		    	strokeOpacity: 1,
+    		    	strokeWidth: 2,
+    		  	},      		
+    		  	monthOutlineColor: {
+        			stroke: '#eee',
+        			strokeOpacity: 1,
+        			strokeWidth: 2
+      			},
+      			unusedMonthOutlineColor: {
+        			stroke: '#eee',
+        			strokeOpacity: 1,
+        			strokeWidth: 2
+      			},      
+      			yearLabel: {
+        			color: '#ccc',
+     			},
+    		},
+
+    	};
+
+       chart.draw(dataTable, options);
+    };
 </script>
