--- a/app/views/projects/project.ejs
+++ b/app/views/projects/project.ejs
@@ -9,7 +9,7 @@
     Invoice Date: <%= moment(project.invdate).format('MM/DD/YYYY') %><br />
     Paid Date: <%= moment(project.paiddate).format('MM/DD/YYYY') %>
   </div>
-    <h3><%= project.title %> <a class="edit-btn" href="/projects/<%= project.slug %>/edit"><i class="fa fa-pencil"></i></a></h3>
+    <h3 class="project-title"><%= project.title %> <a class="edit-btn" href="/projects/<%= project.slug %>/edit"><i class="fa fa-pencil"></i></a></h3>
     <% if(project._client) {%><h4><%= project._client.name %></h4><% } %>
     <p>
       <%= project.desc %>
