--- a/public/scss/components/_typography.scss
+++ b/public/scss/components/_typography.scss
@@ -8,17 +8,20 @@ h2 {
 }
 
 h3 {
-  font-weight: 300;
+  font-weight: 500;
+  color: #CCC;
+  @include fs(40px);
   margin-bottom: 20px;
   &.project-title {
-    @include fs(38px);
-    &:after {
-      content: $fa-var-external-link;
-      font-family:'FontAwesome';
-      font-size:16px;
-      margin-left: 10px;
-      opacity: 0.5;
-    }
+    @include fs(22px);
+    color: $dark;
+    // &:after {
+    //   content: $fa-var-external-link;
+    //   font-family:'FontAwesome';
+    //   font-size:16px;
+    //   margin-left: 10px;
+    //   opacity: 0.5;
+    // }
   }
 }
 
