Adds project delete

--- a/app/views/projects/form.ejs
+++ b/app/views/projects/form.ejs
@@ -47,4 +47,5 @@
     </select></span>
   </label>
   <input type="submit" />
+  <a href="/projects/<%= _project._id %>/delete" class="btn btn-delete">Delete</a>
 </form>
